--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -9,41 +9,48 @@ body{
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
-.header{
-    .header-elements{
-        display:flex;
-        justify-content: space-between;
-        .logo{
-            
-            padding-top:30px;
-        }
-        .first-nav{
-            padding:45px;
-            padding-right: 20px; 
-            align-items: center;
-            .first-nav-ul{
-               display: flex;
-               justify-content: space-between;
-                li{
-                 display: inline-block;
-                 padding: 0 0 0 35px;
-                 font-weight: bold;
-                 font-size:17px;
-                 a{
-                     text-decoration: none;
-                     color:#eeee;
-                 }
-               }
-            }
-        }
-    }
- }
+
 .section1{
     background-image:linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.3)), url("/assets/images/cover.jpg");
     width: 100%;
     background-size:cover;
     height: 100vh;
     background-position: 0% 50%;
+    .header{
+   
+        .header-elements{
+            display:flex;
+            justify-content: space-between;
+            
+            .logo{
+                
+                padding-top:30px;
+            }
+            .first-nav{
+                padding:45px;
+                padding-right: 20px; 
+                align-items: center;
+                .first-nav-ul{
+                   display: flex;
+                   justify-content: space-between;
+                    li{
+                     display: inline-block;
+                     padding: 0 0 0 35px;
+                     font-weight: bold;
+                     font-size:17px;
+                     a{
+                         text-decoration: none;
+                         color:#eeee;
+                     }
+                   }
+                }
+            }
+        }
+
+
+
+        
+    }
 }
 .info{
     margin-top: 120px;
@@ -199,54 +206,7 @@ body{
     }
 
 }
-.whatwedo{
-    display: flex;
-    justify-content: space-between;
-    padding: 35px 0 60px;
-    h2{
-        font-weight: bold;
-    font-size: 36px;
-    letter-spacing: 0.01em;
-    color: #2D3192;
-    }
-    .link{
-         height: 60px;
-         border: 3.5px solid #dfe4eb;
-           border-radius: 12px;
-           text-align: center;
-           
-        a{
-            display: inline-block;
-            height: 56px;
-            padding-left:  24px;
-            font-weight: 600;
-            font-size: 15px;
-            line-height: 56px;
-            color: #222;
-            text-decoration: none;
-            
-        }
-        .arrow-icon{
-          color: #ff931e;
-          font-size: 25px;
-          padding:0 30px;
-          
-        
-        }
-        
-        &:hover{
-        
-            border-color: #ff931e ;
-            transition-duration:0.15s;
-            .arrow-icon{
-                transition-duration: 0.15s;
-                transform: translateX(10px)
-              
-            }
-        }
-        
-    }
-}
+
 .section3{
     padding:35px 0;
      background-image: url("/assets/images/section3_bg.jpg");
@@ -455,4 +415,391 @@ body{
             }
         }
     }
+}
+
+.section7{
+    padding: 35px 0 60px;
+    .row{
+    .content-teams_header{
+        h2{
+            padding: 0 0 30px;
+            font-weight: bold;
+            font-size: 36px;
+            line-height: 1.29;
+            letter-spacing: 0.01em;
+            color: #2D3192;
+        }
+
+    }
+    .person-line{
+        display: flex;
+        justify-content: center;
+
+        .person-box{
+            width: calc(20% - 30px);
+            margin: 0 15px 48px;
+            display: inline-block;
+            vertical-align: top;
+            h3{
+                text-align: center;
+                margin-top: 10px;
+                padding: 0 0 4px;
+                font-weight: 600;
+                font-size: 18px;
+                line-height: 1.33;
+                letter-spacing: -0.02em;
+                color: #222;
+            }
+            p{
+                text-align: center;
+                font-size: 15px;
+                line-height: 1.6;
+                letter-spacing: -0.02em;
+                color: #5F6773;
+            }
+            .background-img-person{
+    
+                img{
+                    width: 100%;
+                    min-height: 272px;
+                    background-image: url("/assets/images/teams_image/person_bg.png");
+                }
+            }
+        }
+    
+    }
+    
+ }
+}
+.section8{
+    background-color: #F6F8FE;
+    .workwithus{
+        h2{
+
+            font-weight: bold;
+            font-size: 36px;
+            line-height: 1.29;
+            letter-spacing: 0.01em;
+            color: #2D3192;
+            margin: 35px 0;
+        }
+        
+    }
+    .icon-content{
+        display: flex;
+        justify-content: space-between;
+        padding-bottom: 30px;
+        .icon-WWU{
+            margin-bottom: 10px;
+        }
+        h3{
+            font-weight: bold;
+            font-size: 20px;
+            line-height: 1.6;
+            letter-spacing: 0.01em;
+            color: #222;
+        }
+
+    }
+   .second-WWU{
+       display: flex;
+       justify-content: space-between;
+       position: relative;
+       padding-bottom: 60px;
+    .img-WWU{
+        width: 50%;
+        img{
+            display: block;
+            width: 100%;
+            border-radius: 4px;
+        } 
+    }
+    .content-box-WWU{
+        height: 325px;
+        width: 55%;
+        margin: 25px 0 0 -15%;
+        padding: 40px 60px;
+        color: #fff;
+        background: #2D3192;
+        border-radius: 4px;
+        position: relative;
+
+        h3{
+            padding: 0 0 32px;
+            font-weight: bold;
+            font-size: 30px;
+            line-height: 1.4;
+            letter-spacing: 0.01em;
+            color: #fff;
+        }
+        p{
+            padding: 0 0 40px;
+            font-size: 16px;
+            line-height: 1.56;
+            color: #fff;
+        }
+        .button-WWU{
+
+             border: 3px solid #fff;
+             border-radius: 12px;
+             display: inline-block;
+             height: 60px;
+             padding: 0 100px 0 24px;
+             font-weight: 600;
+             font-size: 15px;
+             line-height: 56px;
+             background: url("/assets/images/icons/link_orange_icon.svg")no-repeat calc(100% - 24px) 50%;
+             transition: all 0.15s;
+
+             &:hover{
+                background: url("/assets/images/icons/link_orange_icon.svg")no-repeat calc(100% - 20px) 50%;
+                border-color: #FF931E;
+                cursor: pointer;
+             }
+                .vacancies{
+                 text-decoration: none;
+                 color: #fff;
+                }
+            }
+        }
+    }
+}
+
+.section9{
+
+    padding: 35px 0 80px;
+    .news-header{
+        display: flex;
+        justify-content: space-between;
+        padding: 35px 0 40px;
+        h2{
+            font-weight: bold;
+            font-size: 36px;
+            line-height: 1.29;
+            letter-spacing: 0.01em;
+            color: #2D3192;
+        }
+        .news-button{
+            border: 3px solid #dfe4eb;
+            border-radius: 12px;
+            display: inline-block;
+            height: 60px;
+            padding: 0 100px 0 24px;
+            font-weight: 600;
+            font-size: 15px;
+            line-height: 56px;
+            background: url("/assets/images/icons/link_orange_icon.svg")no-repeat calc(100% - 24px) 50%;
+            transition: all 0.15s;
+            &:hover{
+                background: url("/assets/images/icons/link_orange_icon.svg")no-repeat calc(100% - 20px) 50%;
+                border-color: #FF931E;
+             }
+             a{
+                text-decoration: none;
+                color: #222;
+            }
+        }
+    }
+    .news-line{
+        display: flex;
+        justify-content: space-between;
+        a{
+            text-decoration: none;
+        }
+        .news-box{
+            width: calc(33.333% - 20px);
+            margin: 0 0 0 30px;
+            position: relative;
+            &:hover{
+                transform: scale(1.03)
+            }
+    
+            
+          img{
+            margin: 0 0 24px;
+            font-size: 0;
+            border-radius: 6px;
+            overflow: hidden;
+            position: relative;
+            width: 100%;
+          }
+          h3{
+            padding: 0 0 48px;
+            font-weight: 600;
+            font-size: 18px;
+            line-height: 1.75;
+            color: #222;
+          }
+          span{
+            font-size: 18px;
+            line-height: 1.33;
+            color: #5F6773;
+          
+        }
+    }
+    }
+}
+
+footer{
+    background: url("https://www.simbrella.com/site/templates/img/footer_bg.svg") no-repeat #000;
+    padding: 35px 0 25px;
+    background-position: 0 50%;
+    align-items: stretch;
+.footer{
+   
+    margin: 0 auto;
+    padding: 0 20px;
+    .footer-header{
+        display: flex;
+        justify-content: space-between;
+        h2{
+            font-weight: bold;
+            font-size: 36px;
+            line-height: 1.29;
+            letter-spacing: 0.01em;
+            color: #fff;
+        }
+       
+        .right-tab-button{
+            padding-left: 100px;
+            .ul-button{
+                
+                display: flex;
+                justify-content: flex-end;
+                margin-bottom: 50px;
+                ul{
+                    display: flex;
+                    align-items: center;
+                     .border-li{
+                        border-left: 1px solid #505050;
+                        border-right: 1px solid #505050;
+                     }
+                    li{
+                        padding: 0 48px;
+                        display: inline-block;
+                        .active{
+                            color: #FF931E;
+                        }
+        
+                       
+                        a{
+                            text-decoration: none;
+                            color: rgba(255, 255, 255, 0.5);
+                            font-weight: bold;
+                            font-size: 18px;
+                            line-height: 1.33;
+                            letter-spacing: 0.01em;
+                            transition: all 0.15s;
+                            
+                            &:hover{
+                                color: #FF931E;
+                            }
+                        }
+                    };
+                }
+                .footer-button{
+                    border: 3px solid #fff;
+                     border-radius: 12px;
+                     display: inline-block;
+                     height: 60px;
+                     padding: 0 100px 0 24px;
+                     font-weight: 600;
+                     font-size: 15px;
+                     line-height: 56px;
+                     background: url("/assets/images/icons/link_orange_icon.svg")no-repeat calc(100% - 24px) 50%;
+                     transition:0.15s;
+                     &:hover{
+                        background: url("/assets/images/icons/link_orange_icon.svg")no-repeat calc(100% - 20px) 50%;
+                        border-color: #FF931E;
+                     }
+                     a{
+                        text-decoration: none;
+                        color: #fff;
+                     }
+                }
+            }
+            .footer-content {
+                display: flex;
+                justify-content: flex-start;
+                div{
+                    margin-left: 40px;
+                    display: none;
+                    &.active{
+                        display: block;
+                    }
+
+                }
+                span{
+                    display: block;
+                    padding: 0 0 12px;
+                    font-size: 18px;
+                    line-height: 1.45;
+                    color: rgba(255, 255, 255, 0.6)
+                }
+                p{
+                    font-weight: 600;
+                    font-size: 20px;
+                    line-height: 1.54;
+                    color: #fff;
+                    margin-bottom: 48px;
+                }
+                a{
+                    
+                    color: #fff;
+                    text-decoration: none;
+                    font-weight: 600;
+                    
+                }
+            }
+    
+        }
+    }
+
+    .footer-end{
+        width: 100%;
+        max-width: 1140px;
+        margin-top: 200px;
+        display: flex;
+        justify-content: space-between;
+    .bottom-left{
+        p{
+            padding: 0 10px 0 0;
+            font-size: 12px;
+            line-height: 2.67;
+            color: #fff;
+            display: inline-block;
+        }
+        a{
+            display: inline-block;
+             padding: 0 0 0 30px;
+            font-weight: 500;
+            font-size: 12px;
+            line-height: 2.67;
+            color: #fff;
+            text-decoration: none;
+            position: relative;
+            &::before{
+                content: "";
+                display: block;
+                width: 20px;
+                height: 20px;
+                background: url("https://www.simbrella.com/site/templates/img/jis_logo.svg") no-repeat 0 0;
+                position: absolute;
+                left: 0;
+                top: calc(50% - 10px);
+            }
+        }
+    }
+    .bottom-right{
+        width: calc(100% - 360px);
+        font-size: 16px;
+        line-height: 1.5;
+        color: #999;
+        span{
+            margin-left: -18px;
+        }
+
+   } 
+}
+}
 }
